--- a/ironcat/templates/contribute.html
+++ b/ironcat/templates/contribute.html
@@ -3,6 +3,8 @@
 {% block title %}Contribute{% endblock %}
 
 {% block include %}
+    <script src="/static/scripts/d3_helpers/children.js"></script>
+    <script src="/static/scripts/d3_helpers/child.js"></script>
     <script src="/static/scripts/d3_helpers/click.js"></script>
     <script src="/static/scripts/d3_helpers/click_outside.js"></script>
     <script src="/static/scripts/d3_helpers/selectable.js"></script>
