--- a/ironcat/static/css/styles.less
+++ b/ironcat/static/css/styles.less
@@ -1,4 +1,5 @@
 @stroke-primary:     #00ffff;
+@stroke-accentuate:  #00abab;
 @stroke-error:       #ff4040;
 @stroke-hover:       #ffffff;
 @stroke-selected:    #ffffff;
@@ -401,7 +402,8 @@ text {
       >.value {
         >rect {
           fill: @fill-value;
-          stroke: none;
+          stroke-width: 1px;
+          stroke: @stroke-accentuate;
         }
       }
       >.value-types {
