made entire editor look like a single node

--- a/ironcat/static/css/styles.css
+++ b/ironcat/static/css/styles.css
@@ -431,3 +431,9 @@ p {
 .node-title-edit {
   color: #50ff50;
 }
+.boundary rect,
+.boundary path {
+  stroke: #00ffff;
+  stroke-width: 3px;
+  fill: none;
+}
