--- a/ironcat/static/css/styles.less
+++ b/ironcat/static/css/styles.less
@@ -465,3 +465,11 @@ p {
 .node-title-edit {
   color: @text-editing;
 }
+
+.boundary {
+  rect, path {
+    stroke: @stroke-primary;
+    stroke-width: 3px;
+    fill: none;
+  }
+}
